# vector-embedding-evaluation

./: README.md  main.py  pyproject.toml  yoyo.ini
migrations/: 20250530_01_SS41k.py  20250530_01_create_table_for_e5_model_embedding.py  20250531_01_add_text_column.py
src/: db_manager.py  file_management.py  lfm.py  main.py
test/: test_file_management.py
test/resources/books/book2/: chapter_1.txt
test/resources/test/: 1.txt  2.txt
